frontend-app/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
    name: yo-frontend
    namespace: yo-development
spec:
    workloadSelector:
        labels:
            app: frontend-app
    outboundTrafficPolicy:
        mode: REGISTRY_ONLY
    egress:
        - hosts:
            - "kube-system/*"
            - "./*"
