frontend-app/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-app
  namespace: yo-development
spec:
  gateways:
    - yo-istio-ingress/yo-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: "/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: frontend-app
            port:
              number: 80
