frontend-app/authorization.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: frontend-app
  namespace: yo-development
spec:
    selector:
      matchLabels:
        app: frontend-app
    action: ALLOW
    rules:
        - { }
#        - from:
#            - source:
#                principals:
#                  - cluster.local/ns/yo-istio-ingress/sa/istio-ingressgateway
#                  - cluster.local/ns/yo-development/sa/backend-app

    # This policy allows traffic from the Istio ingress gateway to the frontend application.
    # It is used to control access to the frontend application in the yo-development namespace.
